# c-playground

./: .gitignore  CMakeLists.txt  README.md  advanced_pointers_double_pointer_ex.c  advanced_pointers_function_pointer_ex_2.c  comma_operator_ex.c  data.txt  data2.txt  debugging_ex.c  debugging_ex_2.c  debugging_ex_3.c  goto_statement_ex.c  insert.c  insert.h  linkedlist.c  linkedlist.h  macro_ex.c  main.c  other.c  other.h  stdlib_assert_ex.c  string_functions_ex.c  union_ex_2.c  variadic_function_ex.c
advanced-control-flow-ex/: setjump_long_jump_func_ex.c  setjump_long_jump_func_ex_2.c
advanced-datatypes-ex/: flexible_array_mem.c
advanced-functions-ex/: noreturn_function_ex.c  recursion_function_ex.c
advanced-pointers-ex/: advanced_pointers_function_pointer_ex.c
bit-manipulations-ex/: bit_fields_packed_data_ex.c  convert_binary_to_decimal.c
datastructure-ex/binary-tree/: binary_tree.c
datastructure-ex/linklist/: doubly_linklist.c  (+1 more)
dynamic-lib-ex/: main.c  run-ex-commands.sh
dynamic-loading-ex/: dynamicLoading.c
input-output-ex/: char_io_functions_ex.c  char_io_functions_ex_2.c  format_functions_ex.c
macros-ex/: macro_ex_5.c  preprocessor_ex.c
networking-ex/: networking_simple_socket_client_ex.c  networking_simple_socket_ex.c
signals-ex/: handling_signal_ex.c  handling_signal_sigaction_ex.c  signal_fork_ex.c  simple_signal.c
static-lib-ex/: run-ex-commands.sh
stdlib-ex/: stdlib_ex.c
threads-ex/: threads_conds_ex.c  threads_mutex_ex.c  threads_pass_args_ex.c  threads_simple_ex.c  threads_stack_mngmt_ex.c
unions-ex/: union_ex.c
(+2 files in other folders)
